@@ -45,7 +45,7 @@
 
  - Missing config backups
 	- FS#4724
-	- FTP directory restrictions
+	- Any more?
 
  - templates for resellers
 	- limited functions
