@@ -1932,6 +1932,7 @@ backup_vcustom=Custom fields, links and shells
 backup_vscripts=Third-party script installers
 backup_vstyles=Third-party content styles
 backup_vscheds=Scheduled Virtualmin backups
+backup_vchroot=FTP directory restrictions
 backup_virtualmin=Virtualmin settings to also backup
 backup_webmin=Backing up Webmin ACL files ..
 backup_webminfailed=.. tar failed : $1
